fix: today view to big on mobile

--- a/Components/App/App.module.css
+++ b/Components/App/App.module.css
@@ -220,7 +220,7 @@
   .components-container-top {
     flex-direction: column;
     justify-content: center;
-    height: 600px;
+    height: 500px;
   }
 
   .components-container-top .components-container-top__hourly {
@@ -276,5 +276,6 @@
   .components-container-bottom{
     position: relative;
     scale: 0.9;
+    margin-top: 0;
   }
 }
